Link to projects on "about" page

--- a/about/index.html
+++ b/about/index.html
@@ -76,6 +76,7 @@
       <p>University professor tinkering with electronics,
 particularly <a href="https://arduino.cc">Arduino</a>.</p>
 <ul>
+<li><a href="https://karlduino.org/projects">Projects</a></li>
 <li><a href="https://github.com/karlduino">Github</a></li>
 <li><a href="https://karlduino.wordpress.com">Old wordpress site</a></li>
 </ul>
