Add email to about page

--- a/about/index.html
+++ b/about/index.html
@@ -81,6 +81,10 @@ particularly <a href="https://arduino.cc">Arduino</a>.</p>
 <li><a href="https://karlduino.wordpress.com">Old wordpress site</a></li>
 </ul>
 <p>The source for this site is at <a href="https://github.com/karlduino/karlduino.github.io">GitHub</a>.</p>
+<div id="hide_email">
+Contact me at <code>kar</code><b>I</b><code>ldui</code><b>don't</b><code>no</code><b>want</b><code>@</code><b>spam!
+</b><code></code><b>So</b><code></code><b>please</b><code>gm</code><b>leave
+</b><code>ai</code><b>me</b><code>l.</code><b>alone</b><code>c</code><b>!</b><code>om</code><br/>
 
     </div>
   </article>
